--- a/src/assets/sass/overrides.scss
+++ b/src/assets/sass/overrides.scss
@@ -11,17 +11,6 @@ dd {
   margin-bottom: 0;
 }
 
-.main-content {
-  width: 100vw;
-  > .main-content-container {
-    &.container-fluid {
-      min-height: calc(
-        100vh - 9rem
-      ); // fixes content min height taking into account navbar and footer heights
-    }
-  }
-}
-
 a {
   text-decoration: none;
   &:hover {
