--- a/src/pages/Layout/components/Header/styles.module.scss
+++ b/src/pages/Layout/components/Header/styles.module.scss
@@ -158,6 +158,7 @@
       align-items: center;
       left: auto;
       position: relative;
+      top: 0;
       transform: none;
       order: 3;
       margin-left: 0.5rem;
